--- a/README
+++ b/README
@@ -1,3 +1,6 @@
-HELLO GITHUB!
+Internal-Evaluation
 
-HELLO WORLD!
+Web εφαρμογή για την εσωτερική αξιολόγηση του τμήματος Τηλεπικοινωνιακών Συστημάτων και Δικτύων του ΤΕΙ Μεσολογγίου.
+
+Οι χρήστες θα πιστοποιούνται μέσο LDAP και έπειτα θα αξιολογούν μάθημα/καθηγητή με υπάρχουσες ερωτήσεις που έχουν τεθεί απο τον διαχειριστή.
+Ο Διαχειριστής θα μπορεί να εισάγει στο σύστημα: καθηγητές, μαθήματα και ερωτήσεις.
