README second commit

--- a/README
+++ b/README
@@ -3,4 +3,4 @@ Internal-Evaluation
 Web εφαρμογή για την εσωτερική αξιολόγηση του τμήματος Τηλεπικοινωνιακών Συστημάτων και Δικτύων του ΤΕΙ Μεσολογγίου.
 
 Οι χρήστες θα πιστοποιούνται μέσο LDAP και έπειτα θα αξιολογούν μάθημα/καθηγητή με υπάρχουσες ερωτήσεις που έχουν τεθεί απο τον διαχειριστή.
-Ο Διαχειριστής θα μπορεί να εισάγει στο σύστημα: καθηγητές, μαθήματα και ερωτήσεις.
+Ο Διαχειριστής θα μπορεί να εισάγει και να επεξεργάζεται στο σύστημα: καθηγητές, μαθήματα και ερωτήσεις.
